...

            <!-- An explicit nextFocusUp seems necessary to make up work consistently.
            Drawable tinted in code (XML needs API 23+).

            android:importantForAutofill (XML needs API 26+) requires tools:ignore="UnusedAttribute" for lint check -->
            <org.mozilla.tv.firefox.widget.InlineAutocompleteEditText
                android:id="@+id/navUrlInput"
                android:layout_width="498dp"
                android:layout_height="@dimen/urlbar_height"
                android:layout_marginStart="57dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/nav_urlbar_background"
                android:cursorVisible="false"
...
                android:layout_marginBottom="24dp"
                android:background="@drawable/pocket_video_mega_tile_background"
                android:focusable="true"
                android:nextFocusUp="@id/navUrlInput" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/tileContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:background="@android:color/transparent"
                android:clipChildren="false"
...
