...
    <string name="pinned_tile_channel_title">Pinned Tiles</string>

    <string name="pin_label">Pin to homescreen</string>
    <!-- Label shown underneath Pin icon in toolbar when a site is already pinned, to hint to users that
         they can unpin the site to remove it-->
    <string name="unpin_label">Unpin from homescreen</string>
    <string name="notification_pinned_site">Pinned to Firefox TV homescreen</string>
    <string name="notification_unpinned_site">Removed from Firefox TV homescreen</string>

    <!-- The title of a tutorial shown to introduce Pocket video recommendations.
    %1$s will be replaced with the Pocket brand name. -->
    <string name="pocket_home_tutorial_title">Introducing videos recommended by %1$s</string>
    <!-- The description text of a tutorial shown to introduce Pocket video recommendations.
    %1$s will be replaced with the Pocket brand name. -->
...
