...
                android:layout_height="match_parent"
                tools:ignore="ContentDescription"
                tools:src="@drawable/tile_sports_formula_1" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:fontFamily="@string/font_ember_regular"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
...
